--- a/Week 1/csharp/RestaurantReviews/RRUI/RRUI.csproj
+++ b/Week 1/csharp/RestaurantReviews/RRUI/RRUI.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RRModels\RRModels.csproj" />
+    <ProjectReference Include="..\RRBL\RRBL.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
