--- a/Week 1/csharp/RestaurantReviews/RRUI/RRUI.csproj
+++ b/Week 1/csharp/RestaurantReviews/RRUI/RRUI.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\RRModels\RRModels.csproj" />
     <ProjectReference Include="..\RRBL\RRBL.csproj" />
+    <ProjectReference Include="..\RRDL\RRDL.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
